[gd_scene load_steps=5 format=2]

[ext_resource path="res://menuManager.gd" type="Script" id=1]
[ext_resource path="res://timer.tscn" type="PackedScene" id=2]
[ext_resource path="res://setCountdown.tscn" type="PackedScene" id=3]
[ext_resource path="res://mainMenu.tscn" type="PackedScene" id=4]

[node name="menuManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="mainMenu" parent="." instance=ExtResource( 4 )]

[node name="setCountdown" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Timer" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="optionSelected" from="mainMenu" to="." method="_on_menu_optionSelected"]
[connection signal="startTimer" from="setCountdown" to="." method="_on_setTimeValue_startTimer"]
[connection signal="startTimer" from="setCountdown" to="Timer" method="_on_setTimeValue_startTimer"]
